# OpenCL-Practice

./: CMakeLists.txt  README.md  convolution.cl  gen_test.cpp  input.txt  main.cpp
